2009-10-26  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/extensions/defs.py:
	get_menu_defs: Get defs from DMP if available.

2009-10-26  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/data.py:
	* lib/pytis/data/postgresql.py:
	* lib/pytis/form/application.py:
	* lib/pytis/presentation/spec.py:
	Replace add_spec calls and definitions by new function dbtable.

2009-10-23  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Prevent assigning broken menu positions in e_pytis_menu db table.

2009-10-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	* lib/pytis/form/list.py:
	Use InputNumeric in JUMP and FOLDING_LEVEL commands.

2009-10-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/dialog.py:
	Prevent InputNumeric crash with certain locales.

2009-10-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Add Alt-dclick folding action to CodebookForm.

2009-10-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/commands_.py:
	* lib/pytis/form/list.py:
	New command FOLDING_LEVEL.

2009-10-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/output/formatter.py:
	* lib/pytis/util/configuration.py:
	Make `lout' program configurable.

2009-10-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/output/flibdata.py:
	Relax data_table name type to basestring in output processing.

2009-10-22  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/application.py:
	* lib/pytis/form/configui.py:
	* lib/pytis/form/dualform.py:
	* lib/pytis/form/form.py:
	Pass spec kwargs also to data spec to make dynamic virtual forms work as expected.

2009-10-21  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Process macros before splitting to upper and lower page text.

2009-10-21  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Parse macros in CMS texts..

2009-10-21  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Variable substitution generalized..
